--- a/scss/global/_layout.scss
+++ b/scss/global/_layout.scss
@@ -1,6 +1,8 @@
 @use "../util/" as u;
 
-.wrapper {
-  width: min(100% - 40px, u.rem(1100));
-  margin-inline: auto;
+@media screen and (max-width: u.em(1400)) {
+  .wrapper {
+    width: min(100% - 40px, u.rem(1100));
+    margin-inline: auto;
+  }
 }
